[gd_scene load_steps=8 format=2]

[ext_resource path="res://features/flower_character/flower_character.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sunflower.png" type="Texture" id=2]
[ext_resource path="res://features/karma_system/flower_brain.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/faces/talking.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/MotleyForcesRegular-w1rZ3.ttf" type="DynamicFontData" id=5]

[sub_resource type="SphereShape" id=1]
radius = 1.8

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="FlowerCharacter" type="Spatial"]
script = ExtResource( 1 )

[node name="FlowerBrain" parent="." instance=ExtResource( 3 )]

[node name="FlowerSprite" type="Sprite3D" parent="."]
transform = Transform( 0.291171, 0, 0, 0, 0.274879, 0, 0, 0, 0.52591, 0, 1.203, 0 )
billboard = 2
render_priority = 1
texture = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0730432, 0.467101, 0.146174 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.08195, 0, 0, 0, 0.958755, 0, 0, 0, 1.24863, -0.00417492, 0.544456, 0.3256 )
shape = SubResource( 1 )

[node name="Textbox" type="Label3D" parent="."]
transform = Transform( 1.00148, 0, 0, 0, 1.00148, 0, 0, 0, 1.00148, -0.0571409, 2.61544, 0.493777 )
pixel_size = 0.02
billboard = 2
modulate = Color( 0.937255, 0.313726, 0.313726, 1 )
outline_modulate = Color( 1, 0, 0, 1 )
text = " LMB : Water 
 E : Talk"
font = SubResource( 2 )

[node name="Faces" type="Spatial" parent="."]

[node name="Bella" type="Sprite3D" parent="Faces"]
transform = Transform( 0.14526, 0, 0, 0, 0.14526, 0, 0, 0, 1, 0, 1.471, 0 )
visible = false
offset = Vector2( -260, 40 )
billboard = 2
render_priority = 7
texture = ExtResource( 4 )

[node name="Donna" type="Sprite3D" parent="Faces"]
transform = Transform( 0.14526, 0, 0, 0, 0.14526, 0, 0, 0, 1, 0, 1.401, 0 )
visible = false
offset = Vector2( 250, -150 )
billboard = 2
render_priority = 7
texture = ExtResource( 4 )

[node name="Rose" type="Sprite3D" parent="Faces"]
transform = Transform( 0.14526, 0, 0, 0, 0.14526, 0, 0, 0, 1, 0, 1.601, 0 )
visible = false
offset = Vector2( -25, 0 )
billboard = 2
render_priority = 7
texture = ExtResource( 4 )

[node name="Poppy" type="Sprite3D" parent="Faces"]
transform = Transform( 0.14526, 0, 0, 0, 0.14526, 0, 0, 0, 1, 0, 1.397, 0 )
visible = false
offset = Vector2( 5, 0 )
billboard = 2
render_priority = 7
texture = ExtResource( 4 )

[node name="Bobby" type="Sprite3D" parent="Faces"]
transform = Transform( 0.0552738, 0, 0, 0, 0.0552738, 0, 0, 0, 1, 0, 0.821, 0 )
visible = false
offset = Vector2( -300, 0 )
billboard = 2
render_priority = 7
texture = ExtResource( 4 )

[node name="Sunflower" type="Sprite3D" parent="Faces"]
transform = Transform( 0.14526, 0, 0, 0, 0.14526, 0, 0, 0, 1, 0, 1.332, 0 )
visible = false
billboard = 2
render_priority = 7
texture = ExtResource( 4 )

[connection signal="_on_food_received" from="." to="FlowerBrain" method="_on_food_received"]
[connection signal="_on_water_received" from="." to="FlowerBrain" method="_on_water_received"]
[connection signal="child_entered_tree" from="FlowerSprite" to="." method="_on_FlowerSprite_child_entered_tree"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
